{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMouvement",
            "id": "c65a77c5-c2e2-464b-8171-34e8df8ee6fc",
            "actions": [
                {
                    "name": "Mouvement",
                    "type": "PassThrough",
                    "id": "724fa12b-9f72-43a0-a668-cd70e66ec9d9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "d4285834-b353-43fa-81d1-6a850e64ce39",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouvement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "84945a8b-df3c-4976-8646-3ac3e09cbc10",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouvement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ed7837d5-16f9-4788-964b-65aead71550b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouvement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8588a230-2649-4bfe-92ed-61e4e951eb82",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouvement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "66482586-b8e7-4874-89be-cb289c24affd",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouvement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "MouseActions",
            "id": "57defe5a-cd60-4dfc-bc0e-d3bae3805713",
            "actions": [
                {
                    "name": "PrimaryButton",
                    "type": "Value",
                    "id": "2bc0befd-9b8b-4d6c-ab2f-f3b1956270e1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryButton",
                    "type": "Button",
                    "id": "5c074d59-070d-46fe-8fd5-2a2d53bcdcad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ForwardButton",
                    "type": "Button",
                    "id": "14c716e3-83eb-46e0-8740-2c9a6327d884",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BackWardButton",
                    "type": "Button",
                    "id": "81bb563d-da53-4cad-832c-7e47282bf50c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7b417bcb-0292-4831-8316-f9b94522088b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06226fbf-b66f-4f2e-a85e-9001cc265208",
                    "path": "<Mouse>/forwardButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f2bf233-187e-4dc5-8fdb-b53d75652a60",
                    "path": "<Mouse>/backButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackWardButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2fb74755-8355-468e-bc0b-5f74d2eff6b4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "KeyboardActions",
            "id": "f24fd615-1230-4f06-b021-f00ce678e9a1",
            "actions": [
                {
                    "name": "KeyboardActions",
                    "type": "Button",
                    "id": "262b0760-231d-4719-917f-ea963e303528",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "69ec5bf9-fbd5-4c75-8983-469627f3566c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardActions",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68278f86-10f6-4d0c-b45f-61aa40ffad6f",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardActions",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d94a9f96-f867-470c-8925-6cfa0bc6dca3",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardActions",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb87a99f-8b67-4046-8390-6f9442e79baa",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardActions",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe160f9e-e01b-4444-b1e0-51fb891ab1d8",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardActions",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18752465-15c5-45b1-9329-c811c22e3116",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardActions",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30b16162-293b-4ea3-b4f5-e204dfd79039",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardActions",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}